included Julie's comments

--- a/caseStudyWP/04-chap4.Rmd
+++ b/caseStudyWP/04-chap4.Rmd
@@ -156,7 +156,7 @@ To evaluate the component of hatchery production, Proportionate Natural Influenc
 
 We initially considered a stricter definition of hatchery enhancement that included only populations with PNI values $\geqslant$ 0.72. This stricter threshold resulted in excluding most data since reliable time-series of PNI values and spawner abundances are only available for exploitation-rate indicator populations where coded-wire tags have been applied and sampled for recoveries, which on the WCVI tend to be populations with hatcheries. The threshold of $\geqslant$ 0.5, a level associated with most fish being natural origin, accounts for the trade-off between assessing CU-level biodiversity and excluding significant hatchery impacts. 
 
-Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program. Uncertainties in PNI values stem from low sample sizes on the spawning grounds to estimate proportion hatchery-origin spawners, large uncertainties from CWT estimates of hatchery-origin spawners due to insufficient marking of hatchery production, and lack of data on proportions of natural-origin brood stock (and assumption that proportions of natural-origin brood stock equal proportions of natural-origin spawners). 
+Guidelines and methods for estimating PNI values are currently being documented by DFO's Salmonid Enhancement Program (DFO in review)^[DFO in review. Guidelines for Calculating the Proportionate Natural Influence Index as a Metric of the Genetic Influence of Enhanced Pacific Salmon on Wild Populations. Report of the Salmonid Enhancement Program, Vancouver, BC]. Uncertainties in PNI values stem from low sample sizes on the spawning grounds to estimate proportion hatchery-origin spawners, large uncertainties from CWT estimates of hatchery-origin spawners due to insufficient marking of hatchery production, and lack of data on proportions of natural-origin brood stock (and assumption that proportions of natural-origin brood stock equal proportions of natural-origin spawners). 
 
 Because current and historical times-series of the proportion of hatchery-origin spawners were not consistently available for stocks with PNI $\geqslant$ 0.5, total spawner abundances (i.e., combined natural- and hatchery-origin spawners) were used in the assessment of CU and aggregate SMU level statuses. This may results in overly optimistic assessments of status relative to situations where hatchery-origin fish were excluded (as in Interior Fraser River Coho case study).  We recommend the design of hatchery marking and spawning ground sampling programs to collect data to estimate the contribution of hatchery-origin spawners to total production for these escapement indicator stocks. The inclusion of hatchery-origin fish in estimates of status is a key source of uncertainty for this SMU, and likely many others in Pacific Region.
 
