--- a/guidelinesWP/05-chap5.Rmd
+++ b/guidelinesWP/05-chap5.Rmd
@@ -21,7 +21,7 @@ Distribution is a commonly cited component of salmon viability and recovery [@mc
 We recommend that the decision on spatial scale of conservation for biological assessments be part of the peer-review process for CU and SMU assessments, and be based on biological principles of conservation and viability (e.g., as reviewed in @bradfordReviewBiologicalPrinciples2004 and @mcelhanyViableSalmonidPopulations2010). 
 
 
-Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish.  Populations in which production is dominated by hatchery-origin fish (identified by PNI values < 0.5, or expert opinion when data on the proportion of hatchery-origin spawners are not available) should be excluded from analyses, while those that are dominated by natural-origin fish (e.g., PNI values are $\geqslant$ 0.5), should be included in analyses.  These thresholds are based on guidelines proposed by [@withlerGeneticallyBasedTargets2018]. Generally, PNI values should be averaged over the time-period for which hatchery objectives have remained stable. Further, where time-series of the proportion of hatchery-origin salmon on the spawning grounds are available and production is dominated by natural-origin fish, these proportions can be used to generate time-series of natural-origin recruitment for benchmark estimation and natural-origin spawners for status assessment against benchmarks. When the influence of hatchery production is removed in this way, the assessments are less sensitive to the presence of hatcheries and annual variation in hatchery practices.  
+Within this step, information on hatchery enhancement is used to identify populations where production is dominated by hatchery-origin fish.  Populations in which production is dominated by hatchery-origin fish (identified by PNI values < 0.5, or expert opinion when data on the proportion of hatchery-origin spawners are not available) should be excluded from analyses, while those that are dominated by natural-origin fish (e.g., PNI values are $\geqslant$ 0.5), should be included in analyses.  These thresholds are based on guidelines proposed by [@withlerGeneticallyBasedTargets2018], where PNI values were averaged over the time-period for which hatchery objectives have remained stable. Further, where time-series of the proportion of hatchery-origin salmon on the spawning grounds are available and production is dominated by natural-origin fish, these proportions can be used to generate time-series of natural-origin recruitment for benchmark estimation and natural-origin spawners for status assessment against benchmarks. When the influence of hatchery production is removed in this way, the assessments are less sensitive to the presence of hatcheries and annual variation in hatchery practices.  
 
 Infilling among streams or spawning sites for years with missing data is commonly used when compiling CU-level spawner abundance series. When infilled time series are used to estimate LRPs and monitor stock status relative to LRPs, consideration should be given to the scale at which infilling is done at. For example, if LRPs are based on maintaining CU-level (or inlet-level) diversity, infilling of missing data should not be based on escapements from outside of the CU (or inlet). In addition, hatchery enhancement should be carefully accounted for when infilling to avoid overestimating abundances when infilled numbers are based on sites that are artificially enhanced and when enhancement levels vary during the time series, to the extent possible. 
 
@@ -68,7 +68,7 @@ To identify similarities in environmental conditions in the nearshore marine env
 
 
 
-CUs with similar **life-history characteristics** are more likely to respond to common threats and environmental drivers in the same way compared to those with divergent characteristics. For example, Chinook Salmon exhibit at least two distinct life-histories, named stream and ocean types. Stream-type fish rear for more than a year in freshwater and tend to migrate far offshore during their marine stage, whereas ocean-type fish migrate to the ocean as subyearlings (< 1 year) and tend to remain near shore during marine life. These different emigration patterns are believed to have evolved as a consequence of differences in food resources and survival rates in the freshwater and marine environments [@bourretDiversityJuvenileChinook2016], and result in different vulnerabilities to physical and biological conditions in those environments.  Therefore, CUs with different life-history characteristics may experience different status and trends, and may be less appropriate for inferring status under data deficiencies. In some cases, SMUs have been defined to account for differences in life-history in order to better achieve joint status under common management regime (e.g., Fraser Chinook where SMUs are defined in part based on dominant ages at maturity and migration timing). In other SMUs, CUs with various life-history types are combined based on their geographic location (e.g., the Mainland Inlet Chinook SMU which contains CUs with ocean and stream-type fish)<!--CH: to confirm with Diana and Ron. CU34-HOMATH (ocean-type) and CU35-KLINA (stream-type) both in Mainland Inlets CK SMU-->.
+CUs with similar **life-history characteristics** are more likely to respond to common threats and environmental drivers in the same way compared to those with divergent characteristics. For example, Chinook Salmon exhibit at least two distinct life-histories, named stream and ocean types. Stream-type fish rear for more than a year in freshwater and tend to migrate far offshore during their marine stage, whereas ocean-type fish migrate to the ocean as sub-yearlings (< 1 year) and tend to remain near shore during marine life. These different emigration patterns are believed to have evolved as a consequence of differences in food resources and survival rates in the freshwater and marine environments [@bourretDiversityJuvenileChinook2016], and result in different vulnerabilities to physical and biological conditions in those environments.  Therefore, CUs with different life-history characteristics may experience different status and trends, and may be less appropriate for inferring status under data deficiencies. In some cases, SMUs have been defined to account for differences in life-history in order to better achieve joint status under common management regime (e.g., Fraser Chinook where SMUs are defined in part based on dominant ages at maturity and migration timing). In other SMUs, CUs with various life-history types are combined based on their geographic location (e.g., the Mainland Inlet Chinook SMU which contains CUs with ocean and stream-type fish)<!--CH: to confirm with Diana and Ron. CU34-HOMATH (ocean-type) and CU35-KLINA (stream-type) both in Mainland Inlets CK SMU-->.
 
 CUs with very different **population capacities** may respond differently to similar threats. For example, very small CUs may be more vulnerable to moderate fishing pressure if abundances drop below critical conservation thresholds (e.g., 1500 fish, an abundance threshold within the Pacific Salmon Status Scanner), whereas very large CUs may be more resilient to common threats.    <!--CH: I think about COSEWIC criteria which identify DUs < 1000 as Threatened, and also DUs < 10,000 with declining trend as Threatened. For Pacific salmon, the habitat capacity of CUs can span this range (<1000 to >10,000) making some CUs inherently more vulnerable than others, presumably.-->
 <!--CW: I believe Luke also saw this effect in the Chum study case - i.e. smaller CUs were more likely to be below their benchmarks.-->
@@ -99,7 +99,7 @@ As an aside. I wonder if we need a table to show these 4 options from combinatio
 
 ### Proportion of CUs Above Red Status Required to Avoid Serious Harm (Step 4)
 
-@dfoFisheryDecisionMakingFramework2009 indicates that LRPs are based on biological criteria identified by Science, independent of management processes. Given the goal of the WSP to protect the biodiversity of Pacific salmon in part by maintaining CUs above lower biological benchmarks, we have identified 100$\%$ of CUs as an LRP that will avoid serious harm. Exceptions to this may occur where there is uncertainty or mis-identification in the delineation of CUs (e.g., as for some transboundary CUs @holtbyConservationUnitsPacific2007) or CUs are designated extinct. Those CUs would be omitted from the total number of (extant) CUs within the SMU. <!--LW: question, so if a CU goes extinct it doesn't count in the 100% LRP for the SMU anymore? Wouldn't a CU going extinct represent serious harm/impaired productivity?- CH: but when it's extinct by definition it can't be recovered so a rebulidng plan is moot; unlike extirpated or critically endangered. CH: if it's extinct it cannot be rebuilt by definition. I think out goal is to  assess serious harm on extant CUs. Proof of extinction takes a long time (.e., 30-50 years under COSEWIC), so I don't think this the case for many; Until it's designated extinct it would still be considered serious harm. -->This step omits decisions about how to prioritize CUs for conservation under growing threats, including climate change. <!--LW: unclear whether this sentence is saying that you don't need to do a cost-benefit analysis or whether that is part of another step, or that we didn't do this. Also the phrase of 'if only a portion can be conserved under growing threats, including climate change' has a lot wrapped up in it. Seems like there is unwritten context about history and how much we can do to preserve stocks, and what measures could be taken (moratoriums?) vs. what would actually be done. Suggest removing that phrase or clarifying. Removing CUs for this reason seems like a cultural/value idea than based off serious harm. I'm thinking about CUs/populations that could have been in 'serious harm' category for many decades, from a biological perspective they have just been below LRP for a long time. Does that justify disregarding them? Has this come up at TWG meetings?  CH: changed wording to omit, if only a portion can be conserved. This did come up in TWG mtgs, but we can't make those decision here.-->Those decisions would require collaboration with various sectors involved in the management of the SMU, beyond those involved in the science-based process of identifying LRPs. Some CUs may be naturally more vulnerable to threats because of their biological or population characteristics (e.g., due to small habitat capacities), however, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost in the face of ongoing threats. <!--CH: this last sentence is meant to get at the possible exemption of CUs that are naturally at low abundance and "red". The counter argument I heard at the TWG meeting was that those CUs still have ongoing threats and so separating 'natural' vulnerability from threats that deplete a CU is tricky, and probably too hard for us to attempt. And the loss of any CU is serious harm.".-->  In addition, for some CUs the potential for rebuilding to above the red zone may be extremely low. These considerations should be identified in a rebuilding potential analysis to prioritize where resources should be allocated in a rebuilding plan (e.g., @carwardinePriorityThreatManagement2019)<!--LW: I like this point, in light of above comments it distinguishes the setting of LRP at 100% of CUs (which might trigger LRP based on very low abundance CUs which might be at very low probability of recovery based on current/future conditions) vs. the rebuilding plan which can then weigh practicality of recovery. I think this is an important distinction-->.  Considerations on rebuilding potential should be part of the management objectives [@kronlundConsiderationsDesignRebuilding2021] but are outside scope of identifying LRPs.
+@dfoFisheryDecisionMakingFramework2009 indicates that LRPs are based on biological criteria identified by Science, independent of management processes. Given the goal of the WSP to protect the biodiversity of Pacific salmon in part by maintaining CUs above lower biological benchmarks, we have identified a threshold of 100$\%$ of CUs above the red zone as an LRP that will avoid serious harm. Exceptions to this may occur where there is uncertainty or mis-identification in the delineation of CUs (e.g., as for some transboundary CUs @holtbyConservationUnitsPacific2007) or CUs are designated extinct. Those CUs would be omitted from the total number of (extant) CUs within the SMU. <!--LW: question, so if a CU goes extinct it doesn't count in the 100% LRP for the SMU anymore? Wouldn't a CU going extinct represent serious harm/impaired productivity?- CH: but when it's extinct by definition it can't be recovered so a rebulidng plan is moot; unlike extirpated or critically endangered. CH: if it's extinct it cannot be rebuilt by definition. I think out goal is to  assess serious harm on extant CUs. Proof of extinction takes a long time (.e., 30-50 years under COSEWIC), so I don't think this the case for many; Until it's designated extinct it would still be considered serious harm. -->This step omits decisions about how to prioritize CUs for conservation under growing threats, including climate change. <!--LW: unclear whether this sentence is saying that you don't need to do a cost-benefit analysis or whether that is part of another step, or that we didn't do this. Also the phrase of 'if only a portion can be conserved under growing threats, including climate change' has a lot wrapped up in it. Seems like there is unwritten context about history and how much we can do to preserve stocks, and what measures could be taken (moratoriums?) vs. what would actually be done. Suggest removing that phrase or clarifying. Removing CUs for this reason seems like a cultural/value idea than based off serious harm. I'm thinking about CUs/populations that could have been in 'serious harm' category for many decades, from a biological perspective they have just been below LRP for a long time. Does that justify disregarding them? Has this come up at TWG meetings?  CH: changed wording to omit, if only a portion can be conserved. This did come up in TWG mtgs, but we can't make those decision here.-->Those decisions would require collaboration with various sectors involved in the management of the SMU, beyond those involved in the science-based process of identifying LRPs. Some CUs may be naturally more vulnerable to threats because of their biological or population characteristics (e.g., due to small habitat capacities), however, that natural vulnerability does not diminish the serious harm associated with the biodiversity loss if that CU is lost in the face of ongoing threats. <!--CH: this last sentence is meant to get at the possible exemption of CUs that are naturally at low abundance and "red". The counter argument I heard at the TWG meeting was that those CUs still have ongoing threats and so separating 'natural' vulnerability from threats that deplete a CU is tricky, and probably too hard for us to attempt. And the loss of any CU is serious harm.".-->  In addition, for some CUs the potential for rebuilding to above the red zone may be extremely low. These considerations should be identified in a rebuilding potential analysis to prioritize where resources should be allocated in a rebuilding plan (e.g., @carwardinePriorityThreatManagement2019)<!--LW: I like this point, in light of above comments it distinguishes the setting of LRP at 100% of CUs (which might trigger LRP based on very low abundance CUs which might be at very low probability of recovery based on current/future conditions) vs. the rebuilding plan which can then weigh practicality of recovery. I think this is an important distinction-->.  Considerations on rebuilding potential should be part of the management objectives [@kronlundConsiderationsDesignRebuilding2021] but are outside scope of identifying LRPs.
 
 Furthermore, unlike many other marine fisheries, threats and management levers for Pacific salmon extend beyond those associated with fisheries that underlie the definition of SMUs and LRPs. The scale of SMUs is often incongruent with the scale of dominant threats and management levers so that LRPs based on 100$\%$ of CUs being above red status may trigger the development of rebuilding plans under Fish Stock provisions when only a component (e.g., a single CU) requires intervention that are not related to harvest (e.g., hatcheries or habitat amelioration).  Nevertheless, we have identified 100$\%$ of CUs within the SMU should be above their benchmarks to avoid serious harm under the Fish Stock provisions; triggers and interventions at finer and coarser spatial scales will also be essential to sustain Pacific salmon.<!--CH: This is meant to capture the concern that we might trigger RP when CU is already being managed in other ways, and at a different scales-->
 
@@ -203,13 +203,13 @@ CH: revised accordingly. Does this revised text capture it?
 
 <!--SG comment: if status is approximated with the algorithm and the status on the metric is red, this could trigger an integrated status assessment to derive a formal WSP status prior to triggering LRP. -->
 
-The frequency of SMU-scale peer reviews outside of the annual implementation of the Salmon Scanner will depend on variability in CU-level population dynamics over time and how LRPs and SMU-level assessments are used to inform decision making (e.g., if an SMU is batched under the Fisheries Act), among other factors. In the future, management procedures with various frequencies of assessments could be evaluated in a simulation framework to identify risks of delaying assessments relative to costs of implementing them. 
+The frequency of SMU-scale peer reviews outside of the annual implementation of the Salmon Scanner will depend on variability in CU-level population dynamics over time and how LRPs and SMU-level assessments are used to inform decision making (e.g., if an SMU is batched under the *Fisheries Act"), among other factors. In the future, management procedures with various frequencies of assessments could be evaluated in a simulation framework to identify risks of delaying assessments relative to costs of implementing them. 
 
 ### Are Aggregate Abundance-Based LRPs Required For Fisheries Management? (Step 7)
 
 Although proportion-based LRPs may meet requirements under the Fish Stock provisions for Pacific salmon, abundance-based LRPs may be needed for fisheries management decision making (see Section \@ref(roleLRPs)).  For SMUs where harvest at the aggregate scale is a dominant driver of population dynamics and restricting fisheries harvest is a principle lever, an LRP along the metric of aggregate abundances of the SMU may support precautionary management. For example, when LRPs are used to inform a harvest control rule, fishing pressure can be gradually curtailed as aggregate abundances drop towards the LRP to avoid depletion below it. Aggregate abundance-based benchmarks may in some cases be required for local or international management. For example, for Nass and Skeena Sockeye aggregate escapement goals are required under the Pacific Salmon Treaty @TreatyGovernmentCanada2019 <!--CH: check that this compiles to (2019)-->, though to comply with the WSP, the status of component CUs should also be considered. 
 
-However, when LRPs are defined within the context of a Management Procedure framework (see Section \@ref(intro)), then an aggregate abundance-based LRP may not be required if the framework can demonstrate the probability of individual CUs having status above red for various management options. For Pacific salmon, management procedures extend beyond harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate abundance-based LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions within the SMU. If aggregate abundance-based LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-12) are relevant if aggregate abundance-based LRPs are required, and build on proportion-based LRPs derived in the previous steps. Risks associated with uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). 
+However, when LRPs are defined within the context of a Management Procedure framework (see Section \@ref(intro)), then an aggregate abundance-based LRP may not be required if the framework can demonstrate the probability of individual CUs having status above red for various management options. For Pacific salmon, management procedures extend beyond harvest control rules to include time-area closures, habitat enhancement or hatchery supplementation to protect individual CUs. Therefore, the choice to develop an aggregate abundance-based LRP depends on the decision context, and should be made in collaboration with various sectors responsible for management decisions within the SMU. If aggregate abundance-based LRPs are not required, assessment of the SMU would be provided from steps 1-6. The following steps (8-12) are relevant if aggregate abundance-based LRPs are required, and build on proportion-based LRPs derived in the previous steps. Uncertainties introduced by the inclusion of models to relate aggregate abundances to CU-level statuses should be considered when choosing LRP methods (Principle 5 in Section \@ref(principles)). 
 
 
 In the context described here, aggregate abundance-based LRPs are scientifically derived quantities that delineate serious harm to an SMU following the principles outlined in Section \@ref(principles). Although these LRPs can inform harvest control rules, harvest management decisions require consideration of multiple objectives beyond those associated with conservation and serious harm (e.g., socioeconomic objectives). 
@@ -259,7 +259,7 @@ Empirical logistic regression-based LRPs are derived from historical time-series
 
 LRPs based on logistic regressions may be appropriate when the following assumptions are met:
 
-- CU assessments are derived primarily from abundances relative to benchmarks or distribution of spawners instead of time trends. It is possible to combine two or more types of abundance-based benchmarks to assess CUs within an SMU (e.g., use both percentile and S~gen~ benchmarks to assess different CUs).
+- CU assessments are derived primarily from abundances relative to benchmarks or distribution of spawners instead of time trends, or status on spawner abundances relative to benchmarks are considered a suitable approximation for what other metrics might provide. It is possible to combine two or more types of abundance-based benchmarks to assess CUs within an SMU (e.g., use both percentile and S~gen~ benchmarks to assess different CUs). Could it be said that this method is usefule?
 
 - As required for proportional-based benchmarks, data-deficient CUs meet criteria outlined in Step 3 such that their status can be represented by CUs with data. 
 
@@ -347,7 +347,7 @@ Any aggregate-abundance methods that meet the above criteria are applied. See th
 
 ### Compare aggregate abundance-based LRPs (Step 11)
 
-Principle 6 for the development of LRPs states that alternative paradigms for developing LRPs should be evaluated (Section \@ref(principles)). If multiple aggregate abundance-based methods are applied and statuses differ depending on the method chosen, we suggest (re)considering if all assumptions are met. Statuses that converge among methods provide more strength that LRPs represent a level above serious harm.  Although LRPs that converge may be based on assumptions that are coincidentally incorrect, the principle of Occam's razor supports explanations with fewer exceptions. When LRPs diverge, the underlying assumptions causing those divergences should be explored and further reviewed. We suggest comparing aggregate abundance-based LRPs to current generational (geometric) average spawner abundances instead of annual abundances to integrate across independent cohorts within a generation when deriving SMU status. This approach is consistent with WSP assessments [e.g., @grant2017FraserSockeye2020]. 
+Within Principle 4 for the development of LRPs, we recognize that LRPs can be derived using multiple analytical approaches (Section \@ref(principles)). If multiple aggregate abundance-based methods are applied and statuses differ depending on the method chosen, we suggest (re)considering if all assumptions are met. Statuses that converge among methods provide more strength that LRPs represent a level above serious harm.  Although LRPs that converge may be based on assumptions that are coincidentally incorrect, the principle of Occam's razor supports explanations with fewer exceptions. When LRPs diverge, the underlying assumptions causing those divergences should be explored and further reviewed. We suggest comparing aggregate abundance-based LRPs to current generational (geometric) average spawner abundances instead of annual abundances to integrate across independent cohorts within a generation when deriving SMU status. This approach is consistent with WSP assessments [e.g., @grant2017FraserSockeye2020]. 
 
 ### Compare status from aggregate abundance-based LRPs to that from proportion-based LRPs (Step 12)
 
