--- a/guidelinesWP/bib/refs.bib
+++ b/guidelinesWP/bib/refs.bib
@@ -471,6 +471,18 @@
   file = {C\:\\Users\\HoltC\\Zotero\\storage\\9VXDG27S\\Science Guidelines to Support Development of Rebui.pdf}
 }
 
+@article{dfoUpdateAssessmentFramework2016,
+  title = {Update to the Assessment Framework for {{Goose Barnacles}} ({{Ca}}?Inwa; {{Pollicipes}} Polymerus) Incorporating {{Local Ecological Knowledge}} and Advancements in Technology in {{Clayoquot Sound}} off the {{West Coast}} of {{Canada}}},
+  author = {DFO},
+  year = {2016},
+  journal = {DFO Canadian Science Advisory Secretariat Science Advisory Report},
+  volume = {2016/048},
+  pages = {6},
+  abstract = {Five Nuu-chah-nulth-aht Nations (Ahousaht, Ehattesaht, Hesquiaht, Mowachaht/Muchalaht, and Tla-o-qui-aht) have led, in collaboration with Fisheries and Oceans Canada (DFO), the development of an updated assessment framework for Goose Barnacles. The updated assessment framework incorporates Local Ecological Knowledge (LEK) along with revised survey methodology and analytical procedures for estimating Goose Barnacle bed area using current GPS technologies and new analytical procedures to quantitatively estimate biomass.},
+  langid = {english},
+  file = {C\:\\Users\\HoltC\\Zotero\\storage\\5IQGKPXV\\Update to the assessment framework for Goose Barna.pdf}
+}
+
 @article{dfoWildSalmonPolicy2015,
   title = {Wild Salmon Policy Biological Status Assessment for Conservation Units of Interior {{Fraser River Coho Salmon}} ({{{\emph{Oncorhynchus}}}}{\emph{ Kisutch}})},
   author = {DFO},
@@ -1315,10 +1327,10 @@
 }
 
 @article{sheltonLimitsOverfishingReference2002,
-  title = {Limits to Overfishing: Reference Points in the Context of the {{Canadian}} Perspective on the Precautionary Approach - {{Limites}} de Surp\^eche : Points de R\'ef\'erence Dans Le Contexte de La Perspective Du {{Canada}} En Mati\`ere d'approche de Pr\'ecaution},
+  title = {Limits to Overfishing: Reference Points in the Context of the {{Canadian}} Perspective on the Precautionary Approach},
   author = {Shelton, Peter A and Rice, Jake C},
   year = {2002},
-  journal = {DFO Can. Sci. Advis. Sec. Res. Doc.},
+  journal = {DFO Canadian Science Advisory Secretariat Resesearch Document},
   number = {2002/084},
   pages = {30},
   langid = {english},
