--- a/guidelinesWP/04-chap4.Rmd
+++ b/guidelinesWP/04-chap4.Rmd
@@ -74,16 +74,16 @@ ggplot(df, aes(cor, fill=SMU, colour=SMU)) + geom_density(alpha=0.1) + xlim(-1,1
 
 We characterized CU status in three ways, using: (1) the Pacific Salmon Status Scanner, (2) CU-level abundances relative to S~gen~ as a lower benchmark on abundance derived from spawner-recruitment relationship under the WSP, and (3) the distribution of spawning abundance relative to distributional targets developed by the IFCRT [@ifcrtConservationStrategyCoho2006]. In the second approach, we further considered two structural assumptions about the spawner-recruitment relationship based on @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020. The third approach recognizes that an adequate distribution of spawners across subpopulations may be required for long-term persistence of the SMU [@ifcrtConservationStrategyCoho2006], and that a contraction of that distribution may represent increased risk of extinction [@arbeiderInteriorFraserCoho2020]. While multidimensional approaches, such as the Pacific Salmon Status Scanner are recommended for WSP assessments [@holtIndicatorsStatusBenchmarks2009], we apply the other two approaches (2) and (3) to support the development aggregate abundance-based LRPs and for a point of comparison with the Salmon Scanner. Even though aggregate abundance-based LRPs are not required for harvest management of this SMU, we provide logistic regression-based and projection-based LRPs for demonstration purposes.
 
-For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to data availability with a retrospective analysis by re-estimating CU-level benchmarks, CU statuses, and SMU-level LRPs each year using only the data prior to that year. We also implemented a sensitivity analyses where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses on structural assumptions about stock-recruitment relationship when deriving CU-level benchmarks for all proportion-based and aggregate abundance-based LRP methods.
+For this SMU, we evaluated the sensitivity of LRPs based on aggregate abundances to data availability with a retrospective analysis by re-estimating CU-level benchmarks, CU statuses, and SMU-level LRPs each year using only the data prior to that year. We also implemented a sensitivity analysis where one or two CUs were removed from the analyses iteratively and CU-level benchmarks, CU statuses, SMU-level LRPs, and SMU-level statuses were re-estimated. We further ran sensitivity analyses on structural assumptions about stock-recruitment relationship when deriving CU-level benchmarks for all proportion-based and aggregate abundance-based LRP methods.
 
 We found that LRPs and resulting status were more sensitive to structural assumptions about the shape of the stock-recruitment model than to the choice of LRP methods or CU assessment approach (Pacific Salmon Status Scanner vs single-metric on spawner abundances vs. single metric on distribution) or the addition of more years or CUs of data.  However, we note that for logistic regression-based LRPs, the exclusion of CUs resulted in larger uncertainties in SMU-level status, though the 95% CIs of status usually overlapped with the status estimated using all the data. <!--CH: I removed all mention of status being more optimistic with fewer CUs. As we spoke about, this result is likely not generalizable for logistic regression based LRPS. -->
 
 For this case study, we further demonstrated the approach of averaging over structural uncertainties to provide a projection-based LRP that accounts for that uncertainty. Similar averaging is also possible for logistic regression-based LRPs.
 
-## WESTCOAST VANCOUVER ISLAND CHINOOK
+## WEST COAST VANCOUVER ISLAND CHINOOK
 
 
-The West Coast of Vancouver Island (WCVI) Chinook SMU consists of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 escapement indicators stocks, which are stocks with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002; @pacificsalmoncommissionPacificSalmonCommission2018]. Hatchery enhancement is an substantial component of many of these stocks and only escapement indicator stocks without significant enhancement (PNI $\geqslant$ 0.5) were included in our analyses.  Because times-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
+The West Coast of Vancouver Island (WCVI) Chinook SMU consists of 3 CUs [@holtbyConservationUnitsPacific2007], 7 large inlets (or sounds), and 20 escapement indicator stocks, which are stocks with relatively complete time-series of spawner abundances with consistent observation methodology [@riddellReview2001Chinook2002; @pacificsalmoncommissionPacificSalmonCommission2018]. Hatchery enhancement is an substantial component of many of these stocks and only escapement indicator stocks without significant enhancement (PNI $\geqslant$ 0.5) were included in our analyses.  Because times-series of the proportion of hatchery-origin spawners are not available for these stocks, total spawner abundances were used in the assessment of CU and aggregate SMU level statuses, which may results in overly optimistic assessments of status relative to if hatchery-origin fish were excluded (as in Interior Fraser River Coho case study). Spawner abundances tend to be positively correlated among inlets, with an average correlation of 0.28 (Figure \@ref(fig:density-cor-plot)).
 
 
 Under the WSP, CUs are identified at a spatial scale to conserve for long-term sustainability of the species [@holtbyConservationUnitsPacific2007]. For WCVI Chinook, inlets nested within CUs are important spatial scale of diversity for sustainability given geographic separation of spawning habitats among inlets and limited straying among inlets (D. McHugh pers. comm. DFO South Coast Stock Assessment). We considered spawner abundances at the scale of inlets within CUs because of limited demographic exchange between these locations.
@@ -102,7 +102,7 @@ In this case study, we found that status was consistent across the LRP methods t
 
 The Inside South Coast Chum - Non-Fraser SMU (hereafter ISC Chum) includes seven CUs of chum salmon from rivers that drain into Johnstone Strait and the Salish Sea along the mainland of British Columbia and the east coast of Vancouver Island. Chum salmon CUs spawning in the Fraser River watershed are excluded from this SMU. They have been categorized as a separate Inside South Coast Chum - Fraser SMU. While these two SMUs have substantial overlap in ocean fisheries, they have been separated into two SMUs based on differences in terminal fishery impacts and freshwater habitats. @godboutStockStatusWild2004 identified variable but stable status in the central and southern portion of the SMU, with declines in the north, especially in the region defined by Southern Coastal Streams CU. @holtEvaluatingBenchmarksBiological2018 found similar results in a provisional assessment of status.  Spawner abundances tend to be only very weakly correlated among CUs for this SMU, with an average correlation of 0.12 (Figure \@ref(fig:density-cor-plot)). 
 
-The ISC Chum SMU is considered data-limited. While escapement series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions. The quality of recruitment data is not sufficient to reliably estimate parameters from stock-recruit relationships and use those estimates as benchmarks. Instead, benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed three hatchery-dominated systems from the Georgia Strait CU (PNI $<<$0.5). The remaining systems had little or no hatchery enhancement (PNI likely $>$0.72)<!-- LW: definitely want to check with Pieter Van Will on this and skim that report from SEP-->. Where available, hatchery-origin spawners were removed from total spawner abundances. <!--CH: I revised this to better match the ISC chum chapter, after discussion with Luke on Dec. 15-->
+The ISC Chum SMU is considered data-limited. While escapement series are available for many streams starting in 1953, several series are incomplete and require infilling assumptions. The quality of recruitment data is not sufficient to reliably estimate parameters from stock-recruit relationships and use those estimates as benchmarks. Instead, benchmarks were calculated as a percentile of the historical CU-level spawner abundance time series (percentile benchmarks) to inform WSP status, as recommended by @holtEvaluatingBenchmarksBiological2018. We removed three hatchery-dominated systems from the Georgia Strait CU (PNI <<0.5). The remaining systems had little or no hatchery enhancement (PNI likely >0.72)<!-- LW: definitely want to check with Pieter Van Will on this and skim that report from SEP-->. Where available, hatchery-origin spawners were removed from total spawner abundances. <!--CH: I revised this to better match the ISC chum chapter, after discussion with Luke on Dec. 15-->
 
 For this case study, we consider two approaches for characterizing CU status: (1) the Pacific Salmon Status Scanner and (2) a single-metric on spawner abundances using percentile-based benchmarks. We applied both the proportion-based LRP and logistic-regression based LRPs to this case study and evaluated the sensitivity of SMU-level status from proportion-based LRPs to various data inputs. Because of poor fit of the logistic regression as shown by model diagnostics, were we not able to generate reliable logistic regression-based LRPs for this SMU.
 
